[fix image_size(all)]

--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -14,7 +14,7 @@
       <div class="text-center">
         <div class="mb-5">
 
-        <div><%= attachment_image_tag @content, :content_image, :fill, 800, 500, format: 'jpg', class: "content-image" %></div>
+        <div><%= attachment_image_tag @content, :content_image, format: 'jpg', class: "content-image" %></div>
 
         </div>
       </div>
