--- a/app/views/contents/edit.html.erb
+++ b/app/views/contents/edit.html.erb
@@ -40,7 +40,7 @@
 
       <div class="p-5">
         <div class="px-5">
-          <%= attachment_image_tag @user, :content_image, :fill, 800, 500, format: 'jpg', fallback: "test_images/0.jpg", class: "content-image2", style: "border-style: none;", id: "preview_image" %>
+          <%= attachment_image_tag @content, :content_image, format: 'jpg', fallback: "test_images/0.jpg", class: "content-image2", style: "border-style: none;", id: "preview_image" %>
         </div>
       </div>
 
