--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,6 +29,12 @@
 }
 
 // ---------------------------------
+// 行間調整
+p {
+  margin-bottom: 0px !important;
+}
+
+// ---------------------------------
 // testプレビュー（content(show),comment(index),chat(show)）用編集
 .text_start {
   text-align: start !important;
@@ -87,7 +93,7 @@ a:hover{
  }
 
 
-// -----------------------------------USER-----------------------------------
+// -----------------------------------ABOUT-----------------------------------
 // about画面のスライドショー用
 .about {
   height :500px;
@@ -169,18 +175,17 @@ a:hover{
 
 
 // ---------------------------------CONTENT---------------------------------
-//
+// 投稿一覧　用イメージ編集
 .content-image {
   width: 100%;
-  height: 60%;
+  height: 100%;
 }
 
 // -----------------------
 // 新規投稿　用イメージ編集
-
 .content-image2 {
   width: 100%;
-  height: 60%;
+  height: 100%;
   object-fit: cover;
   transition: box-shadow 0.2s ease-out, transform 0.2s ease-out;
 }
@@ -199,11 +204,6 @@ a:hover{
 
 
 // ----------------------------------CHAT------------------------------------
-// 行間調整
-p {
-  margin-bottom: 0px;
-}
-
 // chat(show/自分のメッセ)編集
 .my_message {
   margin-left: 20% ;
@@ -225,6 +225,4 @@ p {
 // chat(show/投稿メッセの表示の仕方)編集
 .text_message {
   word-break: break-all;
-  // white-space: pre-wrap;
-  // text-indent:0px;
 }
