--- a/app/views/chats/_message.html.erb
+++ b/app/views/chats/_message.html.erb
@@ -12,7 +12,7 @@
       </div>
 
       <div class="d-flex align-content-center">
-        <%= attachment_image_tag chat.user, :profile_image, :fill, 200, 200, format: 'jpg', fallback: "test_images/0.jpg", class: "user-image", style: "border-style: none;" %>
+        <%= attachment_image_tag chat.user, :profile_image, format: 'jpg', fallback: "test_images/0.jpg", class: "user-image", style: "border-style: none;" %>
       </div>
 
     </div>
@@ -23,7 +23,7 @@
 
       <div class="d-flex align-content-center">
         <%= link_to user_path(chat.user.id) do %>
-          <%= attachment_image_tag chat.user, :profile_image, :fill, 200, 200, format: 'jpg', fallback: "test_images/0.jpg", class: "user-image", style: "border-style: none;" %>
+          <%= attachment_image_tag chat.user, :profile_image, format: 'jpg', fallback: "test_images/0.jpg", class: "user-image", style: "border-style: none;" %>
         <% end %>
       </div>
 
