--- a/app/views/relationships/index.html.erb
+++ b/app/views/relationships/index.html.erb
@@ -21,7 +21,7 @@
 
             <%= link_to user_path(user.id) do %>
               <div class="p-2 ml-3">
-                <%= attachment_image_tag user, :profile_image, :fill, 200, 200, format: 'jpg', fallback: "0.jpg", class: "user-image", style: "border-style: none;" %>
+                <%= attachment_image_tag user, :profile_image, format: 'jpg', fallback: "0.jpg", class: "user-image", style: "border-style: none;" %>
               </div>
             <% end %>
 
@@ -58,7 +58,7 @@
 
             <%= link_to user_path(user.id) do %>
               <div class="p-2 ml-3">
-                <%= attachment_image_tag user, :profile_image, :fill, 200, 200, format: 'jpg', fallback: "0.jpg", class: "user-image", style: "border-style: none;" %>
+                <%= attachment_image_tag user, :profile_image, format: 'jpg', fallback: "0.jpg", class: "user-image", style: "border-style: none;" %>
               </div>
             <% end %>
 
