--- a/app/views/users/search_result.html.erb
+++ b/app/views/users/search_result.html.erb
@@ -15,7 +15,7 @@
     <div class="col-8">
       <div class="text-center">
 
-        <h1 class="mb-5">Users</h1>
+        <h1 class="mb-5">Search result</h1>
 
         <div class="d-flex justify-content-center mb-4">
           <%= form_with url: search_result_path, local: true, method: :get do |f| %>
