[add notification/model,controller,view,routes]

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -48,6 +48,12 @@ p {
   background-size: cover;
   height :750px;
 }
+// ---------------------------------
+// sign_up幅編集
+.sign_up_form {
+  width: 20%;
+  margin: auto;
+}
 
 // ---------------------------------
 // リンクに対して下線編集
