--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
-<div id="bg_img">
-  <div class="row justify-content-center">
-    <div class="col-2 my-5">
-      <div class="text-center text-nowrap">
+<div class="container-fluid" id="bg_img">
+  <div class="row">
+    <div class="col my-5">
+      <div class="text-center">
 
 
         <div class="mx-4 mb-5">
@@ -9,33 +9,35 @@
         </div>
 
         <%= form_with model: @user, url: user_registration_path, id: 'new_user', class: 'new_user', local: true do |f| %>
-
+          <div>
             <%= render "devise/shared/error_messages", resource: resource %>
-
+          </div>
+          <div class="sign_up_form">
             <div class="mb-2">Name</div>
-            <div class="form-group card mb-5">
+            <div class="form-group card mb-3">
               <%= f.text_field :name, autofocus: true, placeholder: "ユーザー名", class: "form-control" %>
             </div>
 
             <div class="mb-2">Email</div>
-            <div class="form-group card mb-5">
+            <div class="form-group card mb-3">
               <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "sample@example.com", class: "form-control" %>
             </div>
 
             <div class="mb-2">Password</div>
-            <div class="form-group card mb-5">
+            <div class="form-group card mb-3">
               <%= f.password_field :password, autocomplete: "new-password", placeholder: "パスワード", class: "form-control" %>
             </div>
 
             <div class="mb-2">Password</div>
-            <div class="form-group card mb-5">
+            <div class="form-group card mb-3">
               <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "(再確認)", class: "form-control" %>
             </div>
 
             <div class="actions mt-5">
               <%= f.submit "Sign up >>", class: "btn btn-outline-secondary" %>
             </div>
-
+         </div> 
+            
         <% end %>
 
 
