--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -38,7 +38,7 @@
               <div>
                 <div class="d-flex justify-content-end pt-2 px-3">
                   <div class="pl-2 ">
-                    コメント件数：<%= link_to content.comments.count, content_comments_path(content.id) %>
+                    コメント件数：<%= link_to content.comments.count, content_path(content.id) %>
                   </div>
 
                   <div class="pl-5 pr-2 favorite_buttons_<%= content.id %>">
@@ -81,7 +81,7 @@
             <div>
                 <div class="d-flex justify-content-end pt-2 px-3">
                   <div class="pl-2">
-                    コメント件数：<%= link_to content.comments.count, content_comments_path(content.id) %>
+                    コメント件数：<%= link_to content.comments.count, content_path(content.id) %>
                   </div>
 
                   <div class="pl-5 pr-2 favorite_buttons_<%= content.id %>">
