--- a/app/views/contents/show.html.erb
+++ b/app/views/contents/show.html.erb
@@ -10,9 +10,8 @@
     </div>
 
 
-
-
     <div class="col-10">
+
       <div class="text-center">
 
         <h1 class="mb-5">Content Show</h1>
@@ -49,7 +48,7 @@
             <%= attachment_image_tag @content, :content_image, format: 'jpg', class: "content-image" %>
             <div class="d-flex pl-2 pt-2">
               <div class="pl-2">
-                コメント件数：<%= link_to @content.comments.count, content_comments_path(@content.id) %>
+                コメント件数：<%= link_to @content.comments.count, content_path(@content.id) %>
               </div>
 
               <div class="pl-5 pr-2 favorite_buttons_<%= @content.id %>">
@@ -64,11 +63,7 @@
             </div>
           </div>
 
-          <div class="d-flex justify-content-center">
-            <div class="my-3">
-              <%= link_to 'Comment +', content_comments_path(@content), class: "btn btn-outline-info w-100" %>
-            </div>
-          </div>
+          
 
           <div class="content_action">
             <% if user_signed_in? && current_user.id == @content.user_id %>
@@ -85,19 +80,35 @@
         </div>
 
       </div>
+
+
+
+
+
+      <h1 class="text-center mb-3">Comments</h1>
+
+        <div class="comment-form edit_items mb-4">
+        <%= form_with(model:[@content, @c_comment], remote: true) do |f| %>
+          <%= f.text_area :comment, size: "50x7",placeholder: "コメント（MAX:1000）", class: "form-control card" %>
+          <%= f.submit "送信する", class: "mt-3 w-100 btn btn-outline-info" %>
+        <% end %>
+        </div>
+  
+        <div class="comment-index mb-5">
+          <%= render 'comments/c_comment',content: @content %>
+        </div>
+
+
     </div>
-
-
 
 
     <div class="side_right col-1">
-      <span id="back">
-        <a href="#">
-          <i class="fas fa-angle-double-up fa-3x mr-3"></i>
-        </a>
-      </span>
-    </div>
+        <span id="back">
+          <a href="#">
+            <i class="fas fa-angle-double-up fa-3x mr-3"></i>
+          </a>
+        </span>
+      </div>
 
   </div>
 </div>
-
