--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,11 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto mr-3">
             <% if user_signed_in? %>
-              <li class="nav-item mx-2"><%= link_to "Info", notifications_path, class: "nav-link" %></li>
+              <li class="nav-item mx-2">
+                <%= link_to notifications_path, class: "nav-link" do %>
+                  <i class="far fa-bell"></i>
+                <% end %>
+              </li>
               <li class="nav-item mx-2"><%= link_to "My page", user_path(current_user), class: "nav-link" %></li>
               <li class="nav-item mx-2"><%= link_to "Chats", chats_path, class: "nav-link" %></li>
               <li class="nav-item mx-2"><%= link_to "Users", users_path, class: "nav-link" %></li>
