--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -94,7 +94,7 @@
               <div>
                 <div class="card_item1 d-flex justify-content-end pt-2 px-3">
                   <div class="pl-2 card_item2">
-                    コメント件数：<%= link_to content.comments.count, content_comments_path(content.id) %>
+                    コメント件数：<%= link_to content.comments.count, content_path(content.id) %>
                   </div>
 
                   <div class="pl-5 pr-2 card_item2 favorite_buttons_<%= content.id %>">
@@ -139,7 +139,7 @@
               <div>
                 <div class="card_item1 d-flex justify-content-end pt-2 px-3">
                   <div class="pl-2 card_item2">
-                    コメント件数：<%= link_to content.comments.count, content_comments_path(content.id) %>
+                    コメント件数：<%= link_to content.comments.count, content_path(content.id) %>
                   </div>
 
                   <div class="pl-5 pr-2 card_item2 favorite_buttons_<%= content.id %>">
