--- a/app/views/contents/show.html.erb
+++ b/app/views/contents/show.html.erb
@@ -84,19 +84,20 @@
 
 
 
-
+      <% if user_signed_in? %>
       <h1 class="text-center mb-3">Comments</h1>
 
-        <div class="comment-form edit_items mb-4">
-        <%= form_with(model:[@content, @c_comment], remote: true) do |f| %>
-          <%= f.text_area :comment, size: "50x7",placeholder: "コメント（MAX:1000）", class: "form-control card" %>
-          <%= f.submit "送信する", class: "mt-3 w-100 btn btn-outline-info" %>
-        <% end %>
-        </div>
-  
-        <div class="comment-index mb-5">
-          <%= render 'comments/c_comment',content: @content %>
-        </div>
+      <div class="comment-form edit_items mb-4">
+      <%= form_with(model:[@content, @c_comment], remote: true) do |f| %>
+        <%= f.text_area :comment, size: "50x7",placeholder: "コメント（MAX:1000）", class: "form-control card" %>
+        <%= f.submit "送信する", class: "mt-3 w-100 btn btn-outline-info" %>
+      <% end %>
+      </div>
+
+      <div class="comment-index mb-5">
+        <%= render 'comments/c_comment',content: @content %>
+      </div>
+      <% end %>
 
 
     </div>
