--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -20,7 +20,7 @@
 
             <div class="mb-2">Email</div>
             <div class="form-group card mb-3">
-              <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "sample@example.com", class: "form-control" %>
+              <%= f.email_field :email, autocomplete: "email", placeholder: "sample@example.com", class: "form-control" %>
             </div>
 
             <div class="mb-2">Password</div>
