--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -33,6 +33,18 @@
         <div class="card mb-5 form-group">
             <%= f.text_field :name, placeholder: "名前（1~20）", class: "form-control" %>
         </div>
+        
+        
+        <!--<div class="mb-2">Password</div>-->
+        <!--<div class="form-group card mb-3">-->
+        <!--  <%#= f.password_field :password, autocomplete: "new-password", placeholder: "パスワード", class: "form-control" %>-->
+        <!--</div>-->
+        <!--<div class="mb-2">Password</div>-->
+        
+        <!--<div class="form-group card mb-3">-->
+        <!--  <%#= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "(再確認)", class: "form-control" %>-->
+        <!--</div>-->
+
 
         <div class="mb-2">Introduction</div>
         <div class="card mb-5 form-group">
