--- a/app/views/relationships/index.html.erb
+++ b/app/views/relationships/index.html.erb
@@ -16,6 +16,18 @@
       <div class="text-center">
 
         <h1 class="mb-5">Follow</h1>
+        
+        <div class="d-flex justify-content-center mb-4">
+          <%= form_with url: search_result_path, local: true, method: :get do |f| %>
+            <div class="p-2">
+              <%= f.text_field :word, autofocus: true, autocomplete: "name", class: "form-control card field" %>
+            </div>
+             <div class="p-2">
+              <%= f.submit "検索", class: "btn btn-outline-secondary" %>
+            </div>
+          <% end %>
+        </div>
+        
         <% @users_A.each do |user| %>
           <div class="card flex-row justify-content-between align-items-center mb-3">
 
@@ -53,6 +65,18 @@
       <div class="text-center">
 
         <h1 class="mb-5">Follower</h1>
+        
+        <div class="d-flex justify-content-center mb-4">
+          <%= form_with url: search_result_path, local: true, method: :get do |f| %>
+            <div class="p-2">
+              <%= f.text_field :word, autofocus: true, autocomplete: "name", class: "form-control card field" %>
+            </div>
+             <div class="p-2">
+              <%= f.submit "検索", class: "btn btn-outline-secondary" %>
+            </div>
+          <% end %>
+        </div>
+        
         <% @users_P.each do |user| %>
           <div class="card flex-row justify-content-between align-items-center mb-3">
 
