--- a/app/views/relationships/index.html.erb
+++ b/app/views/relationships/index.html.erb
@@ -19,8 +19,11 @@
         
         <div class="d-flex justify-content-center mb-4">
           <%= form_with url: search_result_path, local: true, method: :get do |f| %>
+          <div class="item_image_btn">
+            <%= f.select :range, options_for_select(['Follow']) %>
+          </div>  
             <div class="p-2">
-              <%= f.text_field :word, autofocus: true, autocomplete: "name", class: "form-control card field" %>
+              <%= f.text_field :word, autocomplete: "name", class: "form-control card field" %>
             </div>
              <div class="p-2">
               <%= f.submit "検索", class: "btn btn-outline-secondary" %>
@@ -68,8 +71,11 @@
         
         <div class="d-flex justify-content-center mb-4">
           <%= form_with url: search_result_path, local: true, method: :get do |f| %>
+          <div class="item_image_btn">
+            <%= f.select :range, options_for_select(['Follower']) %> 
+          </div>  
             <div class="p-2">
-              <%= f.text_field :word, autofocus: true, autocomplete: "name", class: "form-control card field" %>
+              <%= f.text_field :word, autocomplete: "name", class: "form-control card field" %>
             </div>
              <div class="p-2">
               <%= f.submit "検索", class: "btn btn-outline-secondary" %>
