--- a/app/views/searches/_search_result.html.erb
+++ b/app/views/searches/_search_result.html.erb
@@ -1,6 +1,3 @@
-<div class="container-fluid">
-  <div class="row">
-
     <div class="col-2">
       <div class="side_left">
         <%= link_to new_content_path do %>
@@ -17,18 +14,7 @@
 
         <h1 class="mb-5">Search result</h1>
 
-        <div class="d-flex justify-content-center mb-4">
-          <%= form_with url: search_result_path, local: true, method: :get do |f| %>
-            <div class="p-2">
-              <%= f.text_field :word, autofocus: true, autocomplete: "name", class: "form-control card field" %>
-            </div>
-             <div class="p-2">
-              <%= f.submit "検索", class: "btn btn-outline-secondary" %>
-            </div>
-          <% end %>
-        </div>
-
-        <% @users.each do |user| %>
+        <% users.each do |user| %>
           <div class="card flex-row justify-content-between align-items-center mb-3">
 
             <%= link_to user_path(user.id) do %>
@@ -71,6 +57,3 @@
         </a>
       </span>
     </div>
-
-  </div>
-</div>
