--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -19,6 +19,10 @@
 
         <div class="d-flex justify-content-center mb-4">
           <%= form_with url: search_result_path, local: true, method: :get do |f| %>
+          <div class="item_image_btn">
+            <%= f.select :range, options_for_select(['User']) %>
+          </div>
+          
             <div class="p-2">
               <%= f.text_field :word, autofocus: true, autocomplete: "name", class: "form-control card field" %>
             </div>
