--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -2,7 +2,7 @@
 
   <div class="row">
     <h1 class="col-12 text-center mb-5">Contents</h1>
-    <h4 class="col-12 text-center mb-5">~ New ~</h4>
+    <h4 class="col-12 text-center mb-5">- New -</h4>
   </div>
 
   <div class="side_left">
@@ -13,54 +13,11 @@
 
 
   <div class="container-fluid">
-    <div class="main_contents row">
-
-
-      <% @contents_reverse.each do |content| %>
-
-      <div class="col-6">
-        <div class="card mb-5">
-
-          <%= link_to content_path(content.id) do %>
-            <div><%= attachment_image_tag content, :content_image, format: 'jpg', class: "content-image" %></div>
-          <% end %>
-
-          <div class="d-flex flex-row">
-
-            <%= link_to user_path(content.user.id) do %>
-              <div class="p-2">
-                <%= attachment_image_tag content.user, :profile_image, format: 'jpg', fallback: "test_images/0.jpg", class: "user-image", style: "border-style: none;" %>
-              </div>
-            <% end %>
-
-            <div>
-              <div class="d-flex justify-content-end pt-2 px-3">
-                <div class="pl-2 ">
-                  コメント件数：<%= link_to content.comments.count, content_path(content.id) %>
-                </div>
-
-                <div class="pl-5 pr-2 favorite_buttons_<%= content.id %>">
-                  <%= render 'favorites/favorite',content: content %>
-                </div>
-              </div>
-
-              <div class="pb-2 px-2">
-                <%= content.description.truncate(30) %>
-              </div>
-            </div>
-
-          </div>
-
-
-        </div>
-      </div>
-
-      <% end %>
-
-
+    <div class="main_contents row scroll-list jscroll">
+      <%= render partial: 'index', collection: @contents_reverse, as: 'content' %>
+      <%= paginate @contents_reverse %>
     </div>
   </div>
-
 
   <div class="side_right">
     <span id="back">
