--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -247,13 +247,11 @@ a:hover{
 }
 
 
-
+// -----------------------
+// 無限スクロース編集者
 nav.pagination {
   display: none;
 }
 .scroll-list {
   padding: 0;
-}
-.jscroll-inner {
-  display: flex;
 }
