--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -14,9 +14,8 @@
 
   <div class="container-fluid main_contents">
     <div class="row scroll-list jscroll mx-auto">
-      <div class="jscroll-inner d-flex flex-wrap w-100">
+      <div class="d-flex flex-wrap w-100">
         <%= render partial: 'index', collection: @contents_reverse, as: 'content' %>
-        
       </div>
     </div>
   </div>
