--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -22,7 +22,7 @@
           <div class="item_image_btn">
             <%= f.select :range, options_for_select(['User']) %>
           </div>
-          
+
             <div class="p-2">
               <%= f.text_field :word, autofocus: true, autocomplete: "name", class: "form-control card field" %>
             </div>
@@ -50,11 +50,18 @@
             </div>
 
             <div class="p-2 pr-4">
-              <% if current_user != user %>
-                <% if user.followed_by?(current_user) %>
-                  <%= link_to "フォロー解除", user_relationships_path(user.id), method: :delete, class: "btn btn-outline-secondary" %>
-                <% else %>
-                  <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-info" %>
+
+              <% if @a == "dm" %>
+                <div class="mt-2">
+                  <%= link_to 'DM', chat_path(user.id), class: "btn btn-outline-success px-5" %>
+                </div>
+              <% else %>
+                <% if current_user != user %>
+                  <% if user.followed_by?(current_user) %>
+                    <%= link_to "フォロー解除", user_relationships_path(user.id), method: :delete, class: "btn btn-outline-secondary" %>
+                  <% else %>
+                    <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-info" %>
+                  <% end %>
                 <% end %>
               <% end %>
             </div>
